Add Exercise2 (FrontEnd, JPA Criteria API)

--- a/Week8/web/index.xhtml
+++ b/Week8/web/index.xhtml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ez="http://java.sun.com/jsf/composite/components"
+>
+
 
     <f:loadBundle var="message" basename="Message"/>
     <h:head>
@@ -18,19 +24,20 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"/>
-        <script type="text/javascript"
-                src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"/>
+        <!--<script type="text/javascript"-->
+        <!--src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"/>-->
 
 
     </h:head>
     <h:body>
         <div>
             <h3 class="center-align">
-                <!--#{msg['home_welcome']}-->
                 Welcome
             </h3>
         </div>
+
+        <p:growl id="growl" showDetail="true"/>
+
 
         <div class="container">
             <div class="row">
