Updates of previous homework

--- a/Week4/web/index.xhtml
+++ b/Week4/web/index.xhtml
@@ -52,6 +52,11 @@
                             #{msg.go_to} <h:commandLink value="#{msg.projects_skills_page}"
                                                         action="goToProjectsSkills"/>
                         </li>
+
+                        <li>
+                            #{msg.go_to} <h:commandLink value="#{msg.assignment_page}" action="goToAssignmentsPage"/>
+
+                        </li>
                     </ul>
                 </h:form>
             </div>
